Fix element styles and scrollbars

--- a/mailpoet/assets/js/src/email-editor/engine/components/styles-sidebar/index.scss
+++ b/mailpoet/assets/js/src/email-editor/engine/components/styles-sidebar/index.scss
@@ -7,6 +7,12 @@
   .components-navigator-provider,
   .components-navigator-screen {
     height: 100%;
+    overflow: hidden;
+  }
+
+  .components-navigator-screen {
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   .components-navigator-button {
